2003.05.30

  fixed bug where resetting an MP3 input stream would emit a short burst
    of static

2003.05.27

  you can now specify what format you are loading for efficiency reasons

2003.05.25

  fixed a bug in the DirectSound streaming code where you would hear the
    beginning of some sounds before they actually stopped

2003.04.22

  added getName() method to AudioDevice

2003.03.11

  you can pass smart pointers straight into API calls, for example:
    AudioDevicePtr device = OpenDevice();
    OutputStreamPtr sound = OpenSound(device, "blah.wav");
    sound->play();

2003.02.17

  added support for MemoryFile objects

2003.01.27

  removed support for OpenAL because it was causing compile issues on
    systems with different and incompatible versions of OpenAL

2003.01.09

  no longer use the MTM or STM mikmod loaders because they crash on
    certain wav files

2003.01.05

  many general improvements to wxPlayer

2003.01.04

  use __declspec instead of def files for mingw compatiblity

2002.12.30
  build the winmm audio device in Cygwin if it's available
  build the DirectSound audio device in Cygwin if it's available
  greatly improved linearity of the volume property in the DirectSound
    device (Mik Popov)

2002.12.21

  add support for audio device enumeration
  enable setting the GLOBAL_FOCUS bit on DS surfaces via the global=
    device parameter
  enable choosing nonstandard DirectSound devices via the device_guid=
    device parameter
  drastic performance increase when using MULTIPLE sound effects

2002.12.20

  implement volume, panning, and pitch shift on SoundEffect objects
  improved latency of SGI audio device

2002.10.21

  disable Ogg or FLAC if 'configure' can't find them.

2002.10.12

  1.9.1 release

2002.10.11

  added GetSupportedFileFormats for file format enumeration
  added audiere-config script which provides version information and
    external library dependencies